# static_string

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: basic_string.hpp  hash.hpp  string.hpp
src/Implementation/: basic_string.hpp  basic_string_Assert.hpp  basic_string_Hash.hpp  basic_string_Impl.hpp  basic_string_Iterator.hpp  basic_string_Types.hpp
test/: test.cpp
